helm/harbor/harbor-core-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/proxy-body-size: "0"
    ingress.kubernetes.io/ssl-redirect: "true"
    meta.helm.sh/release-name: harbor
    meta.helm.sh/release-namespace: default
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: harbor-harbor-ingress-demo
  namespace: default
spec:
  rules:
  - host: core.harbor.domain
    http:
      paths:
      - backend:
          service:
            name: harbor-harbor-portal
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
      - backend:
          service:
            name: harbor-harbor-core
            port:
              number: 80
        path: /api
        pathType: ImplementationSpecific
      - backend:
          service:
            name: harbor-harbor-core
            port:
              number: 80
        path: /service
        pathType: ImplementationSpecific
      - backend:
          service:
            name: harbor-harbor-core
            port:
              number: 80
        path: /v2
        pathType: ImplementationSpecific
      - backend:
          service:
            name: harbor-harbor-core
            port:
              number: 80
        path: /chartrepo
        pathType: ImplementationSpecific
      - backend:
          service:
            name: harbor-harbor-core
            port:
              number: 80
        path: /c
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - core.harbor.domain
    secretName: harbor-harbor-ingress
